src/additional-solutions/oidc-mock-provider-k8s/oidc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oidc-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: "oidc-ip"
    networking.gke.io/managed-certificates: "oidc-ssl-cert"
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: oidc-mock-provider
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: oidc-mock-provider
            port:
              number: 80
